--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  line-height: 1.6;
+  line-height: 1.5;
   padding: 30px 20px 80px;
   max-width: 800px;
   margin: 0 auto;
@@ -19,20 +19,26 @@ h1 {
 
 h2 {
   margin: 40px 0 0;
-  font-size: 24px;
+  font-size: 22px;
+}
+
+li {
+  list-style-position: inside;
+  text-indent: -20px;
 }
 
 ol,
 ul {
   counter-reset: list;
-  padding-inline-start: 20px;
-  margin-bottom: 10px;
+  padding-inline-start: 0;
+  margin-left: 20px;
 }
 
 ol > li {
   list-style: none;
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 500;
+  margin-bottom: 8px;
 }
 ol > li:before {
   content: counter(list) ") ";
@@ -41,6 +47,7 @@ ol > li:before {
 ol > li > ol > li {
   font-size: 16px;
   font-weight: 400;
+  margin-bottom: 0;
 }
 ol > li > ol > li:before {
   content: "(" counter(list) ") ";
@@ -59,4 +66,13 @@ footer {
   font-weight: 700;
   text-align: center;
   font-size: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 28px;
+  }
+  .intro {
+    font-size: 18px;
+  }
 }
